FIX: Overflow-x & position:sticky
put overflow-x:hidden only on main tag.

--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,21 @@
 html{
     border-right: 5px solid #7443FF;
     scroll-behavior: smooth;
-    /* overflow-x: hidden; */
+}
+
+html, body, * {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    color: black; 
 }
 
 body{
+}
+
+main{
+    width:71%;
+    margin: 0 auto;
+    padding: 0 5em 2em 5em; /* defining container whitespace */
     overflow-x: hidden;
 }
 
@@ -39,17 +50,6 @@ body{
 .scrolled{
     height: 50px;
     transition: all 300ms ease-in-out;
-}
-
-html, body, * {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
-    color: black; 
-}
-
-main{
-    width:71%;
-    margin: 0 auto;
 }
 
 .show-desktop{
@@ -86,10 +86,6 @@ ul{
 
 a {
     text-decoration: none; 
-}
-
-main {
-    padding: 0 5em 2em 5em; /* defining container whitespace */
 }
 
 /* Button styling */
@@ -590,9 +586,7 @@ footer p{
 
 @media only screen and (min-width: 768px) and (max-width: 1366px){
     
-    body{
-        overflow-x: hidden;
-      
+    body{      
     }
 
     body, *{
@@ -619,7 +613,6 @@ footer p{
 
 @media only screen and (max-width: 1024px){
     body{
-        overflow-x: hidden;
     }
     
     body, *{
